[package]
name = "bevy_simplenet"
description = "Simple server/client channel implemented over websockets with support for Bevy"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.0.11"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/bevy_simplenet"

[features]
default = ["bevy", "client", "server"]

bevy = ["dep:bevy_ecs"]

client = ["ezsockets/client"]

server      = ["axum", "axum-server", "ezsockets/axum", "ezsockets/server", "tokio"]
tls-rustls  = ["axum-server/tls-rustls"]
tls-openssl = ["axum-server/tls-openssl"]

[dependencies]
async-trait     = { version = "0.1" }
bincode         = { version = "1.3" }
cfg-if          = { version = "1.0" }
crossbeam       = { version = "0.8" }
enfync          = { git = "https://github.com/UkoeHB/enfync.git", branch = "master" }
form_urlencoded = { version = "1.2" }
serde           = { version = "1.0" }
serde_json      = { version = "1.0" }
serde_with      = { version = "3.0" }
tracing         = { version = "0.1" }
url             = { version = "2.4" }

# optional deps
axum        = { version = "0.6", optional = true }
axum-server = { version = "0.5", optional = true }
bevy_ecs    = { version = "0.11", optional = true }
tokio       = { version = "1.29", optional = true }

[dependencies.ezsockets]
git              = "https://github.com/gbaranski/ezsockets.git"
rev              = "99d07bd"
default-features = false

[dev-dependencies]
tracing-subscriber = { version = "0.3" }

[lib]
path = "src/lib.rs"
test = false

[[test]]
name = "tests"
path = "tests/test/mod.rs"
doctest = false
required-features = ["client", "server"]
