[package]
name = "bevy_simplenet-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy                  = { version = "0.12" }
bevy_kot              = { version = "0.11.0" }
bevy_lunex            = { version = "0.0.9" }
bevy_simplenet        = { path = "../../", default_features = false, features = [ "client", "bevy" ] }
bevy_simplenet-common = { path = "../common/" }
enfync                = { version = "0.1" }
url                   = { version = "2.4" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1" }
tracing-wasm             = { version = "0.2" }
wasm-timer               = { version = "0.2" }
