[package]
name = "bevy_simplenet-client"
version = "0.1.0"
edition = "2021"

[features]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
bevy                  = { version = "0.15" }
bevy_cobweb           = { version = "0.16" }
bevy_cobweb_ui        = { version = "0.12" }
bevy_simplenet        = { path = "../../", default-features = false, features = [ "client", "bevy" ] }
bevy_simplenet-common = { path = "../common/" }
enfync                = { version = "0.1" }
url                   = { version = "2.4" }
wasm-timer            = { version = "0.2" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1" }
tracing-wasm             = { version = "0.2" }
