[package]
name = "bevy_simplenet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy                  = { version = "0.15",  default-features = false }
bevy_cobweb           = { version = "0.13" }
bevy_simplenet        = { path = "../../", default-features = false, features = [ "server", "bevy" ] }
bevy_simplenet-common = { path = "../common/" }
enfync                = { version = "0.1" }
tracing               = { version = "0.1" }
tracing-subscriber    = { version = "0.3" }
